--- a/Main.html
+++ b/Main.html
@@ -6,24 +6,78 @@
     const { Engine, Render, Runner, Bodies, Composite, Events, World, Body } = Matter;
 
     // 创建引擎
-    const engine = Engine.create();
-    const world = engine.world;
+    let engine = Engine.create();
+    let world = engine.world;
+    let runner;
+    let render;
 
     // 画布设置
     const canvas = document.getElementById('gameCanvas');
     let canvasHeight = 400; // 初始高度
     let canvasWidth = window.innerWidth; // 动态获取窗口宽度
 
-    const render = Render.create({
-        canvas: canvas,
-        engine: engine,
-        options: {
-            width: canvasWidth,
-            height: canvasHeight,
-            wireframes: false,  // 禁用线框模式，启用填充和文本渲染
-            background: 'transparent'
-        }
-    });
+    // 初始化渲染器
+    function initializeRender() {
+
+        render = Render.create({
+            canvas: canvas,
+            engine: engine,
+            options: {
+                width: canvasWidth,
+                height: canvasHeight,
+                wireframes: false,
+                background: 'transparent'
+            }
+        });
+
+
+
+
+
+
+
+
+
+        // 获取 canvas 的 2D 上下文，用于手动绘制文字
+        const context = render.context;
+
+
+
+        // 手动绘制文字
+        Events.on(render, 'afterRender', function () {
+            boxes.forEach(box => {
+                context.font = '12px Arial';
+                context.fillStyle = 'black';
+
+                const x = box.position.x;
+                const y = box.position.y;
+                const word = valueToText[box.value] || box.value.toString();
+
+                context.textAlign = 'center';
+                context.textBaseline = 'middle';
+                context.fillText(word, x, y);
+            });
+        });
+
+
+
+        // 检查是否有两个物体可以合并
+        Events.on(engine, 'beforeUpdate', function () {
+            for (let i = 0; i < boxes.length; i++) {
+                for (let j = i + 1; j < boxes.length; j++) {
+                    const bodyA = boxes[i];
+                    const bodyB = boxes[j];
+
+                    if (bodyA.value === bodyB.value && areBodiesClose(bodyA, bodyB)) {
+                        mergeBoxes(bodyA, bodyB);
+                        boxes.splice(j, 1);
+                        boxes.splice(i, 1);
+                        break;
+                    }
+                }
+            }
+        });
+    }
 
     // 游戏状态
     let score = 0;
@@ -33,6 +87,19 @@
     // 边界变量
     let ground, ceiling, leftWall, rightWall;
 
+    // 防抖函数
+    function debounce(func, wait) {
+        let timeout;
+        return function executedFunction(...args) {
+            const later = () => {
+                clearTimeout(timeout);
+                func(...args);
+            };
+            clearTimeout(timeout);
+            timeout = setTimeout(later, wait);
+        };
+    }
+
     // 更新分数
     function updateScore(value) {
         score += value;
@@ -40,7 +107,7 @@
 
         // 检查是否达到了增加高度的阈值
         if (score >= nextHeightIncreaseThreshold) {
-            increaseCanvasHeight();
+            // increaseCanvasHeight();
             nextHeightIncreaseThreshold += 300; // 下一个阈值
         }
     }
@@ -73,8 +140,8 @@
         const boundaryStyle = {
             isStatic: true,
             render: {
-                fillStyle: '#34572B',  // 内部填充颜色 (例如：番茄红)
-                strokeStyle: '#34572B',  // 边框颜色 (例如：黑色)
+                fillStyle: '#34572B',  // 内部填充颜色
+                strokeStyle: '#34572B',  // 边框颜色
                 lineWidth: 3            // 边框线宽
             }
         };
@@ -87,35 +154,86 @@
         Composite.add(world, [ground, ceiling, leftWall, rightWall]);
     }
 
-    // 更新边界当窗口大小变化时
-    function updateBoundaries() {
-        canvasWidth = window.innerWidth;
 
-        // 更新 canvas 宽度
-        canvas.width = canvasWidth;
-        render.options.width = canvasWidth;
-        render.canvas.width = canvasWidth;
 
-        // 更新地板和天花板的位置
-        Body.setPosition(ground, { x: canvasWidth / 2 - 200, y: canvasHeight + 25 });
-        Body.setPosition(ceiling, { x: canvasWidth / 2 - 200, y: -25 });
 
-        // 更新左右墙的位置
-        Body.setPosition(leftWall, { x: -25, y: canvasHeight / 2 });
-        Body.setPosition(rightWall, { x: canvasWidth + 25, y: canvasHeight / 2 });
+    // 添加一个标志变量来跟踪resize是否正在处理中
+    let isResizing = false;
 
-        Body.scale(ground, canvasWidth / ground.bounds.max.x + 0.1, 1);
-        Body.scale(ceiling, canvasWidth / ceiling.bounds.max.x + 0.1, 1);
+    // 处理窗口大小变化
+    function handleResize() {
+        // 如果已经在处理resize，则直接返回
+        if (isResizing) {
+            return;
+        }
 
-        // 确保物体不会被视为超出边界
-        render.bounds.min.x = 0;
-        render.bounds.max.x = canvasWidth + 100;  // 向右扩展边界
-        render.bounds.min.y = 0;
-        render.bounds.max.y = canvasHeight + 5; // 向下扩展边界
+        // 设置标志为正在处理
+        isResizing = true;
+
+        try {
+
+            const bodies = Composite.allBodies(world);
+            bodies.forEach(body => {
+                Body.setVelocity(body, { x: 0, y: 0 });
+                Body.setAngularVelocity(body, 0);
+            }, 500);
+
+            // 停止当前的物理引擎和渲染器
+            Runner.stop(runner);
+            Render.stop(render);
+
+            // 清除现有的物理世界
+            World.clear(world);
+            Engine.clear(engine);
+
+            // 创建新的引擎和世界
+            engine = Engine.create();
+            world = engine.world;
+
+            // 更新画布尺寸
+            canvasWidth = window.innerWidth;
+
+            // 重新初始化渲染器
+            initializeRender();
+
+            // 重新创建边界
+            createBoundaries();
+
+            // 清空并重建方块数组
+            boxes.length = 0;
+
+            // 重新启动物理引擎和渲染器
+            runner = Runner.create();
+            Runner.run(runner, engine);
+            Render.run(render);
+
+            // 更新上次的尺寸
+            lastWidth = window.innerWidth;
+            lastHeight = window.innerHeight;
+
+
+            render.canvas.width = canvasWidth;
+            render.canvas.height = canvasHeight;
+            // 更新渲染器视口
+            Render.lookAt(render, {
+                min: { x: 0, y: 0 },
+                max: { x: canvasWidth, y: canvasHeight }
+            });
+        } finally {
+            // 确保一定时间后才允许下一次resize
+            setTimeout(() => {
+                isResizing = false;
+            }, 300);
+        }
     }
 
+
+
+    // 创建防抖后的resize处理函数
+    const debouncedResize = debounce(handleResize, 1000);
+
     // 监听窗口大小变化
-    window.addEventListener('resize', updateBoundaries);
+    window.addEventListener('resize', debouncedResize);
 
     // 初始化方块
     const boxSize = 75;
@@ -123,34 +241,34 @@
 
     // 不同数字的颜色
     const colors = {
-        1: '#D8F3DC',  // 淡绿色
-        2: '#F3D8E7',  // 淡紫色
-        4: '#F35A5A',  // 亮红色
-        8: '#5A7AF3',  // 亮蓝色
-        16: '#F39C5A', // 橙色
-        32: '#9C5AF3', // 深紫色
-        64: '#F3E45A', // 亮黄色
-        128: '#5AF3E0', // 亮青色
-        256: '#5A5AF3', // 深蓝色
-        512: '#F35A9A', // 亮粉红色
-        1024: '#8F8F8F', // 中性灰色
-        2048: '#5AF39C' // 青绿色
+        1: '#D8F3DC',
+        2: '#F3D8E7',
+        4: '#F35A5A',
+        8: '#5A7AF3',
+        16: '#F39C5A',
+        32: '#9C5AF3',
+        64: '#F3E45A',
+        128: '#5AF3E0',
+        256: '#5A5AF3',
+        512: '#F35A9A',
+        1024: '#8F8F8F',
+        2048: '#5AF39C'
     };
 
-    // 映射数字到对应的英文单词，按照给定的顺序和同义词扩展
+    // 映射数字到对应的英文单词
     const valueToText = {
-        1: "Try",              // 尝试
-        2: "Effort",           // 努力
-        4: "Failure",     // 坚持
-        8: "Reflection",       // 反思
-        16: "Growth",          // 成长
-        32: "Persistence",     // 坚持（同义词）
-        64: "inspiration",   // 反思（同义词）
-        128: "Progress",    // 成长（同义词）
-        256: "Perseverance",     // 坚持（同义词）
-        512: "Improvement",  // 反思（同义词）
-        1024: "Success",   // 成长（同义词）
-        2048: "GreatGame",        // 
+        1: "Try",
+        2: "Effort",
+        4: "Failure",
+        8: "Reflection",
+        16: "Growth",
+        32: "Persistence",
+        64: "inspiration",
+        128: "Progress",
+        256: "Perseverance",
+        512: "Improvement",
+        1024: "Success",
+        2048: "GreatGame",
         default: "GreatGame"
     };
 
@@ -173,7 +291,7 @@
     // 创建形状
     function createShape(x, y, value = 1) {
         let shape;
-        const factor = shapeFactors[value] || 1.0;  // 根据 value 获取对应的 factor
+        const factor = shapeFactors[value] || 1.0;
         let options = {
             label: value.toString(),
             restitution: 0.7,
@@ -230,13 +348,11 @@
         }
 
         shape.value = value;
-        shape.factor = factor;  // 保存 factor 信息
+        shape.factor = factor;
         boxes.push(shape);
         Composite.add(world, shape);
         return shape;
     }
-
-
 
     // 合并两个方块
     function mergeBoxes(boxA, boxB) {
@@ -249,36 +365,13 @@
 
 
 
-    // 检查是否有两个物体可以合并
-    Events.on(engine, 'beforeUpdate', function () {
-        for (let i = 0; i < boxes.length; i++) {
-            for (let j = i + 1; j < boxes.length; j++) {
-                const bodyA = boxes[i];
-                const bodyB = boxes[j];
-
-                if (bodyA.value === bodyB.value && areBodiesClose(bodyA, bodyB)) {
-                    mergeBoxes(bodyA, bodyB);
-                    boxes.splice(j, 1);
-                    boxes.splice(i, 1);
-                    break;
-                }
-            }
-        }
-    });
-
-    // 检查物体之间的距离
     // 检查物体之间的距离，考虑 factor
     function areBodiesClose(bodyA, bodyB) {
         const distance = Math.sqrt(Math.pow(bodyA.position.x - bodyB.position.x, 2) +
             Math.pow(bodyA.position.y - bodyB.position.y, 2));
-        const combinedSize = (boxSize / 2 * bodyA.factor) + (boxSize / 2 * bodyB.factor);  // 考虑 factor
+        const combinedSize = (boxSize / 2 * bodyA.factor) + (boxSize / 2 * bodyB.factor);
         return distance < combinedSize;
     }
-
-    // // 检查物体是否静止
-    // function isBodyStill(body) {
-    //     return Math.abs(body.velocity.x) < 0.1 && Math.abs(body.velocity.y) < 0.1;
-    // }
 
     // 生成新方块
     function generateNewBox() {
@@ -296,59 +389,20 @@
         }
     });
 
-    // 添加窗口大小变化时的反作用力
+    // 记录上一次的窗口尺寸
     let lastWidth = window.innerWidth;
     let lastHeight = window.innerHeight;
 
-    window.addEventListener('resize', function () {
-        const newWidth = window.innerWidth;
-        const newHeight = window.innerHeight;
 
-        const deltaX = newWidth - lastWidth;
-        const deltaY = newHeight - lastHeight;
 
-        // 当窗口变大时，施加反方向的力
-        if (deltaX !== 0 || deltaY !== 0) {
-            boxes.forEach(box => {
-                const forceX = (deltaX > 0) ? -0.03 : -0.03;
-                const forceY = (deltaY > 0) ? -0.01 : 0.01;
-
-                Body.applyForce(box, box.position, { x: forceX, y: forceY });
-            });
-        }
-
-        // 更新宽度和高度
-        lastWidth = newWidth;
-        lastHeight = newHeight;
-    });
-
-    // 获取 canvas 的 2D 上下文，用于手动绘制文字
-    const context = render.context;
-
-    // 手动绘制文字
-    Events.on(render, 'afterRender', function () {
-        boxes.forEach(box => {
-            context.font = '12px Arial';  // 设置字体
-            context.fillStyle = 'black';  // 设置文字颜色
-
-            // 获取物体的位置
-            const x = box.position.x;
-            const y = box.position.y;
-
-            // 获取物体的值，并映射到相应的单词
-            const word = valueToText[box.value] || box.value.toString();
-
-            // 绘制文本，居中显示
-            context.textAlign = 'center';
-            context.textBaseline = 'middle';
-            context.fillText(word, x, y);  // 在物体的中心绘制单词
-        });
-    });
 
 
     // 初始化游戏
+    initializeRender();
+
     createBoundaries();
     Render.run(render);
-    const runner = Runner.create();
+    runner = Runner.create();
     Runner.run(runner, engine);
+
 </script>
